# marcellmiller27

./: .dockerignore  .gitignore  AGENTS.md  AI_AGENT_WORK_SUMMARY.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  accounting_services.py  admin_models.py  admin_services.py  agents_models.py  agents_services.py  auth_enforcement.py  bea_models.py  bea_services.py  billing_webhook.py  config.py  crm_services.py  crypto_models.py  crypto_services.py  database.py  db_models.py  deal_xray.py  deal_xray_models.py  dependencies.py  edgar_models.py  edgar_services.py  edgar_workbook.py  editorial_llm.py  excel_export.py  financial_diligence.py  financial_diligence_models.py  foundation_models.py  foundation_services.py  fundamentals.py  integration_services.py  lead_models.py  main.py  market_models.py  market_services.py  mobile_models.py  mobile_services.py  models.py  newsletter_content.py  newsletter_render.py  opportunity_score.py  (+18 more)
backend/app/routers/: __init__.py  accounting.py  admin.py  agents.py  auth.py  bea.py  billing.py  crm.py  crypto.py  dashboards.py  deal_xray.py  edgar.py  financial_diligence.py  integrations.py  leads.py  market.py  mobile_auth.py  newsletters.py  pipeline.py  (+5 more)
backend/tests/: test_accounting_db.py  test_admin_rbac.py  test_agents.py  test_api.py  test_bea.py  test_billing_webhook.py  test_bls.py  test_crm.py  test_crypto.py  test_deal_xray.py  test_deal_xray_comps.py  test_edgar.py  test_edgar_workbook.py  test_editorial_llm.py  test_excel_export.py  test_financial_diligence.py  test_foundation.py  test_fundamentals.py  test_hardening.py  test_integrations.py  test_leads.py  test_market.py  test_mobile_auth.py  test_newsletters.py  test_pipeline.py  test_public_macro.py  test_reports_db.py  test_research.py  test_security_encryption.py  test_security_tokens.py  test_services.py  test_support.py  test_valuations.py  test_webauthn.py
(+236 files in other folders)
