# John Henry Investments, LLC — Copyright (c) 2026. All rights reserved. Proprietary & confidential. See LICENSE.
# JHI-SIG: 69M2705M | Build & Deploy | John Henry Investments (proprietary)
[project]
name = "john-henry-investments-backend"
version = "0.1.0"
description = "FastAPI backend for John Henry Investments accounting, audit, financial reporting, dashboards, and CRM workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "sqlalchemy",
  "uvicorn[standard]",
  "pydantic",
  "psycopg[binary]"
]

[project.optional-dependencies]
dev = [
  "httpx2",
  "pytest",
  "ruff"
]

[tool.ruff]
line-length = 100
target-version = "py311"
