[project]
name = "john-henry-investments-backend"
version = "0.1.0"
description = "FastAPI backend for John Henry Investments accounting, audit, financial reporting, dashboards, and CRM workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "sqlalchemy",
  "uvicorn[standard]",
  "pydantic",
  "psycopg[binary]",
  "openpyxl",
  "reportlab",
  "cryptography",
  "PyJWT",
  "stripe"
]

[project.optional-dependencies]
dev = [
  "httpx2",
  "pytest",
  "ruff"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# The dev-default AUTH_JWT_SECRET is intentionally short in tests; production is
# gated to a >= 32-byte secret by Settings.validate(). Silence PyJWT's dev nudge.
filterwarnings = [
  "ignore::jwt.warnings.InsecureKeyLengthWarning",
]
